ClipIt-v1.3.7-12122010001 - 12 Dec. 2010
	+ Fixed: Changed E-Mail address and Project website.
	+ Fixed: Included all files that get generated by autogen.sh, so
			that now you don't need to run it anymore.

ClipIt-v1.3.6-06122010002 - 06 Dec. 2010
	+Fixed: Fixed a small bug when building without indicator support.

ClipIt-v1.3.5-06122010001 - 06 Dec. 2010
	+ Added: Added support for "Application Indicator".
	+ Fixed: Fixed a couple of typos and indentations.

ClipIt-v1.3.4-26112010001 - 26 Nov. 2010
	+ Fixed: Now we are warning the user that his history is saved in a
			plain text file and ask for his explicit permission
			to save the history.
	+ Fixed: When the user disables history saving we also ask if he wants
			to empty the current history file.
	+ Fixed: Renamed "Find" menu entry to "Manage history".
	+ Fixed: ClipIt now complies to the "XDG Base Directory Specification".

ClipIt-v1.3.3-23112010001 - 23 Nov. 2010
	+ Fixed: Fixed some more markup.
	+ Fixed: Rearranged parts of the Preferences dialog to be cleaner.
	+ Fixed: Fixed bug in "Manage History" window not selecting the history
			item properly.

ClipIt-v1.3.2-22112010001 - 22 Nov. 2010
	+ Fixed: Fixed most of the markup and indentation (replaced double spaces
			with tabs).
	+ Fixed: Removed clipboard restoring from history, as this seems to cause
			more problems than it solves.

ClipIt-v1.3.1-17112010001 - 17 Nov. 2010
	+ Added: Added autostart support for LXDE.
	+ Fixed: Fixed problem with "Edit" window not appearing.

ClipIt-v1.3.0-14112010001 - 14 Nov. 2010
	+ Added: Added "Edit" and "Remove" buttons to the "Manage History" dialog.
	+ Fixed: Major speed improvements for big history entries while:
			searching through the history;
			populating the "Manage History" dialog;
			generating the popup menus;
		All of these should now be more than 99% faster, at the expense
		of an (at most) 1MB overhead. I think it's worth it, though.