@@ -99,6 +99,10 @@ void save_history()
 		fwrite(&end, 4, 1, history_file);
 		fclose(history_file);
 	}
+	/* Refresh indicator menu. Temporary solution until
+	 * getting the visible status of the menu is supported by the API
+	 */
+	create_app_indicator(0);
 }
 
 /* Checks if item should be included in history and calls append */
